// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Integration should load local and override configuration files 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "customConfigPath": null,
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/wp-env-gutenberg-5fea4c56/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:999",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:999",
        "WP_TESTS_DOMAIN": "localhost:999",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 23306,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 999,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:456",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:456",
        "WP_TESTS_DOMAIN": "localhost:456",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 23307,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 456,
      "themeSources": [],
    },
  },
  "lifecycleScripts": {
    "afterClean": null,
    "afterCleanup": null,
    "afterDestroy": "test",
    "afterReset": null,
    "afterStart": null,
  },
  "name": "gutenberg",
  "testsEnvironment": true,
  "workDirectoryPath": "/cache/wp-env-gutenberg-5fea4c56",
}
`;

exports[`Config Integration should load local configuration file 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "customConfigPath": null,
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/wp-env-gutenberg-5fea4c56/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:123",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:123",
        "WP_TESTS_DOMAIN": "localhost:123",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 13306,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 123,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8889",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8889",
        "WP_TESTS_DOMAIN": "localhost:8889",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 23307,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 8889,
      "themeSources": [],
    },
  },
  "lifecycleScripts": {
    "afterClean": null,
    "afterCleanup": null,
    "afterDestroy": null,
    "afterReset": null,
    "afterStart": "test",
  },
  "name": "gutenberg",
  "testsEnvironment": true,
  "workDirectoryPath": "/cache/wp-env-gutenberg-5fea4c56",
}
`;

exports[`Config Integration should use default configuration 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "customConfigPath": null,
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/wp-env-gutenberg-5fea4c56/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8888",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8888",
        "WP_TESTS_DOMAIN": "localhost:8888",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": null,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 8888,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8889",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8889",
        "WP_TESTS_DOMAIN": "localhost:8889",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": null,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 8889,
      "themeSources": [],
    },
  },
  "lifecycleScripts": {
    "afterClean": null,
    "afterCleanup": null,
    "afterDestroy": null,
    "afterReset": null,
    "afterStart": null,
  },
  "name": "gutenberg",
  "testsEnvironment": true,
  "workDirectoryPath": "/cache/wp-env-gutenberg-5fea4c56",
}
`;

exports[`Config Integration should use environment variables over local and override configuration files 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "customConfigPath": null,
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/wp-env-gutenberg-5fea4c56/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:12345",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:12345",
        "WP_TESTS_DOMAIN": "localhost:12345",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 23306,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 12345,
      "testsPort": 61234,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "FS_METHOD": "direct",
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:61234",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:61234",
        "WP_TESTS_DOMAIN": "localhost:61234",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "path": "/cache/wp-env-gutenberg-5fea4c56/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/wp-env-gutenberg-5fea4c56/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "multisite": false,
      "mysqlPort": 23307,
      "phpVersion": null,
      "phpmyadmin": false,
      "phpmyadminPort": null,
      "pluginSources": [],
      "port": 61234,
      "testsPort": 61234,
      "themeSources": [],
    },
  },
  "lifecycleScripts": {
    "afterClean": null,
    "afterCleanup": null,
    "afterDestroy": null,
    "afterReset": null,
    "afterStart": "test",
  },
  "name": "gutenberg",
  "testsEnvironment": true,
  "workDirectoryPath": "/cache/wp-env-gutenberg-5fea4c56",
}
`;
